# archie

./: .gitignore  README.md  index.html  package-lock.json  package.json  test.atxt  vite.config.ts
docs/: Brainstorming.md
pages/: editor.html  markdown.html  plantuml.html  settings.html
src/: editor.ts  index.ts  main.ts  markdown.ts  plantuml.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
